[package]
name = "bomberman"
version = "0.0.0"
authors = ["cepalle", "jpilleux", "sylvain"]
edition = "2018"

[dependencies]
rand = "*"
amethyst = "0.15.3"
log = { version = "0.4.8", features = ["serde"] }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
